server/public/stylesheet.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
#no-js div{
    background-color: #1e89cf;
    color: #F6F6F6;
    box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.5);
    text-align: center;
    padding-top: 3em;
    padding-bottom: 3em;
}
#no-js h1{
    text-align: center;
    font-size: 2.4em;
    text-shadow: 2px 1px 4px #a6a6a6;
    margin-bottom: 0.15em;
    margin-top: 0.1em;
}
#no-js p{
    font-size: 2.5em;
}
#content{
    display:none;
}
.js #content{
    display: block;
}
.js #no-js{
    display: none;
}
body {
    font: 16px "Helvetica Neue", Helvetica, Arial;
    max-height: 100%;
    overflow:visible;
    padding-bottom: 70px;
    background-color: #f6f6f6;
}
p{
    margin-bottom: 0%;
}
form {
    background: #dbdbdb;
    position: fixed;
    bottom: 0;
    width: 80%;
    display: inline;
    margin:0px;
}
button{
    margin-bottom: 1.5em;
    width: 100%;
}
.button{
    margin-bottom: 0%;
}
form input {
    border: 0;
    padding: 10px;
    width: 90.5%;
    margin-right: .5%;
}
form button {
    width: 9%;
    background: #1e89cf;
    border: none;
    padding: 10px;
    color: white;
}
#messages {
    list-style-type: none;
    margin-left: 0;
    margin-top: 0;
    margin-bottom: 0;
    margin-right: 20%;
    padding: 0;
}
#messages li {
    padding: 5px 10px;
    font-size: 1.4em;
}
#sidebar {
    background-color: #dbdbdb;
    float: right;
    width: 20%;
}
h1, h2, h3, h4, h5, h6{
    margin-bottom: 0px;
}
a:link {
    color: #1e89cf;
}
a:visited {
    color: #1e89cf;
}
.alignLeft {
    float:left;
}
.alignRight {
    float:right;
}
input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="week"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], input[type="color"], textarea{
    margin-bottom: 0px;
}
form  div.row{
    width: 100%;
    margin-left: 0%;
    margin-right: 0%;
    max-width: inherit;
}
#sidebar{
  width: 100%;
  height: 100%;
  background-color: #3d3d3d;
  padding-top: 1em;
  position: fixed;
  right: 0;
}
button.radius, .button.radius{
  border-radius: 0px;
  background-color: rgba(255, 255, 255, 0.08);
}
button:hover{
    border-radius: 0px;
    background-color: #008CBA
}
#sidebar > div{
   padding-right: 0%;
   padding-left: 0%;
}
header{
    padding: 0.5em 2% 0.5em 2%;
    background-color: #1d1d1d;
    color: #f6f6f6;
    margin-top:0px;
    border-bottom: solid 0.1em white;
}
header h1{
    color: #f6f6f6;
    margin-top:0px;
    text-shadow: 2px 1px 4px #a6a6a6;
}
h1{
    margin-top:0px;
}
.username{
    font-size: 1.5em;
    text-align: center;
    color: #f6f6f6;
    margin-bottom: 2em;
}
#sidebar footer{
    position: initial;
    bottom: 0;
    text-align: center;
    width: inherit;
}
#sidebar footer p{
    width:100%;
    text-align: center;
    color: #f6f6f6;
    font-size: 1.2em;
}
#github-link a{
    font-style: italic;
    font-size: 1.1em;
}
#github-link a:hover{
    text-decoration: underline;
}
a.button, a.button:link, a.button:visited{
    color: #f6f6f6;
}
#messages{
    float: left;
    margin-right: 0%;
    width: 100%;
    background-color: #f6f6f6;
}
#messages li{
    color: #060606;
    background-color: #dfdfdf;
    font-size: 1em;
}
#messages li:nth-child(odd) {
    background: #f6f6f6;
    color: #060606;
}
form{
    left: 0;
    width: 100%;
}
#menu-icon {
    display: block;
    -webkit-box-shadow: 0 10px 0 1px white, 0 16px 0 1px white, 0 22px 0 1px white; 
    box-shadow: 0 10px 0 1px white, 0 16px 0 1px white, 0 22px 0 1px white;   
}
.border-menu {
    position: relative;
    padding-left: 1.25em;
    box-sizing: content-box;
}
.border-menu:before {
   box-sizing: content-box;
   margin-top: 0.1em;
   content: "";
   position: absolute;
   top: 0.25em;
   left: 0;
   width: 1em;
   height: 0.125em;
   border-top: 0.375em double #fff;
   border-bottom: 0.125em solid #fff;
}
h1 span{
    padding-left: 1.4em;
    display: block;
}
@media (min-width: 850px){
    .border-menu{
        display:none;
    }
    h1 span{
        padding-left: 0%;
    }
    * {
        margin: 0;
        padding: 0;
        box-sizing: border-box;
    }
    body {
        font: 16px "Helvetica Neue", Helvetica, Arial;
        max-height: 100%;
        overflow:visible;
    }
    form {
        background: #dbdbdb;
        position: fixed;
        bottom: 0;
        width: 80%;
        display: inline;
        margin:0px;
    }
    button{
        margin-bottom: 1.5em;
        width: 100%;
    }
    .button{
        margin-bottom: 0%;
    }
    form input {
        border: 0;
        padding: 10px;
        width: 90.5%;
        margin-right: .5%;
    }
    form button {
        width: 9%;
        background: #1e89cf;
        border: none;
        padding: 10px;
        color: white;
    }
    #messages {
        list-style-type: none;
        margin-left: 0;
        margin-top: 0;
        margin-bottom: 0;
        margin-right: 20%;
        padding: 0;
    }
    #messages li {
        padding: 5px 10px;
        font-size: 1.4em;
    }
    #sidebar {
        background-color: #dbdbdb;
        float: right;
        width: 20%;

    }
    h1, h2, h3, h4, h5, h6{
        margin-bottom: 0px;
    }
    a:link {
        color: #1e89cf;
    }
    a:visited {
        color: #1e89cf;
    }
    .alignLeft {
        float:left;
    }
    .alignRight {
        float:right;
    }
    input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="week"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], input[type="color"], textarea{
        margin-bottom: 0px;
    }
    form  div.row{
        width: 100%;
        margin-left: 0%;
        margin-right: 0%;
        max-width: inherit;
    }
    #sidebar{
        height: 100%;
        background-color: #3d3d3d;
        padding-top: 1em;
        position: fixed;
        right: 0;
    }
    #sidebar{
        box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.5);
    }
    #sidebar > div{
       padding-right: 0%;
       padding-left: 0%;
    }
    header{
        padding: 0.5em 2% 0.5em 2%;
        background-color: #0d0d0d;
        color: #f6f6f6;
        margin-top:0px;
        border-bottom: solid 0.1em white;
        display: none;
    }
    header h1{
        color: #f6f6f6;
        margin-top:0px;
    }
    h1{
        margin-top:0px;
    }
    .username{
        font-size: 1.5em;
        text-align: center;
        color: #f6f6f6;
        margin-bottom: 2em;
    }
    #sidebar footer{
        position: inherit;
        text-align: center;
        width: inherit;
    }
    #sidebar footer p{
        width:100%;
        text-align: center;
        color: #f6f6f6;
        font-size: 1.2em;
    }
    #github-link a{
        font-style: italic;
        font-size: 1.1em;
    }
    #github-link a:hover{
        text-decoration: underline;
    }
    a.button, a.button:link, a.button:visited{
        color: #f6f6f6;
    }
    #messages{
        float: left;
        margin-right: 0%;
        width: 80%;
        background-color: #f6f6f6;
    }
    #messages li{
        color: #060606;
        background-color: #dfdfdf;
        font-size: 1em;
    }
    #messages li:nth-child(odd) {
        background: #f6f6f6;
        color: #060606;
    }
    form{
        left: 0;
    }
    }

